# benchmarking_suite_range_searching_libraries

./: CMakeLists.txt  COPYING  README.md
include/benchmark/: benchmark.hh  common.hh  data_and_query_generation.hh  perform_queries.hh  range_tree_libraries.hh  testing_configurations.hh
include/benchmark/all_libraries/: 3DTK_kdTreeImpl_modified.hh  3dtk_test.hh  alglib_test.hh  ann_test.hh  boost_test.hh  brute_force_test.hh  cgal_test.hh  flann_test.hh  kdtree2_test.hh  kdtree3_test.hh  kdtree4_test.hh  kdtree_test.hh  libkdtree2_test.hh  libkdtree_test.hh  libnabo_test.hh  libspatialindex_test.hh  nanoflann_test.hh  octree_test.hh  pcl_test.hh  pico_tree_test.hh  rtree_template_test.hh  spatial_test.hh
include/test/: common.hh  range_tree_libraries.hh
src/benchmark/: 3d_bboxes_tests.cpp  3d_points_tests.cpp  CMakeLists.txt  benchmark.cpp  data_and_query_generation.cpp  perform_queries.cpp
src/benchmark/make_job_scripts/: make_job_scripts.cpp  make_job_scripts.hh  make_massif_commands.cpp
src/test/: CMakeLists.txt  test.cpp
